# pilot-hdc-kg-integration

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile_runner  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: hdc-pipeline.yml
kg_integration/: __main__.py  app.py  config.py  logger.py  middleware.py
kg_integration/core/: db.py  exceptions.py
kg_integration/models/: __init__.py  base.py  crud.py
kg_integration/models/metadata/: __init__.py  crud.py  metadata.py
kg_integration/models/spaces/: __init__.py  crud.py  spaces.py
kg_integration/routers/: api_root.py
kg_integration/routers/v1/: api_health.py  api_metadata.py  api_spaces.py  api_users.py
kg_integration/schemas/: __init__.py  activity_log.py  base.py  collab.py  metadata.py  space.activity.avsc  space.py
kg_integration/utils/: activity_log_manager.py  auth_manager.py  collab_manager.py  dataset_manager.py  helpers.py  kafka_manager.py  keycloak_manager.py  kg_manager.py  project_manager.py  spaces_activity_log.py
migrations/: alembic.ini  env.py
migrations/scripts/: create_kg_integration_db.sql  create_kg_integration_schema.sql
migrations/versions/: 0001_spaces.py  0002_metadata.py  0003_adding_dataset_id_to_metadata.py  0004_adding_direction_to_metadata.py
tests/: conftest.py
tests/fixtures/: base.py  metadata.py  spaces.py
tests/routers/: test_activity_log.py  test_middleware.py  test_root.py
tests/routers/v1/: test_health.py  test_metadata.py  test_spaces.py  test_users.py
