[tool.poetry]
name = "kg-integration"
version = "1.3.23"
description = "Service for performing KG requests."
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.111"
FastAPI-SQLAlchemy = "0.2.1"
uvicorn = { extras = ["standard"], version = "^0.23" }
pilot-platform-common = "1.0.2"
psycopg2 = "2.9.9"
asyncpg = "0.29.0"
backoff = "2.2.1"
greenlet = "^3.0.3"
pydantic-settings = "^2.3.4"
setuptools = "^70.0"
aiokafka = "^0.11.0"
fastavro = "^1.9.7"

[tool.poetry.dev-dependencies]
SQLAlchemy-Utils = "0.38.2"
alembic = "1.11.2"
pytest-asyncio = "0.21.1"
testcontainers = "3.7.1"
pytest-httpx = "^0.24"
pytest-cov = "5.0.0"

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
