[tool.poetry]
name = "kg-integration"
version = "1.3.32"
description = "Service for performing KG requests."
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.115.5"
FastAPI-SQLAlchemy = "^0.2.1"
uvicorn = { extras = ["standard"], version = "^0.23" }
pilot-platform-common = "^0.8.0"
psycopg2 = "^2.9.9"
asyncpg = "^0.30.0"
backoff = "2.2.1"
greenlet = "^3.0.3"
pydantic-settings = "^2.3.4"
setuptools = ">=70.0"
aiokafka = "^0.11.0"
fastavro = "1.10.0"

[tool.poetry.dev-dependencies]
SQLAlchemy-Utils = "0.38.2"
alembic = "1.11.2"
pytest-asyncio = "^0.24.0"
testcontainers = "~3.7"
pytest-httpx = "^0.30"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="function"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
